--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,7 +54,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Assets
 --------------------------------------------------------------*/
 @import "assets/bootstrap4";
-@import "assets/underscores";
+//@import "assets/underscores";
 
 
 /*--------------------------------------------------------------
