--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -1,3 +1,10 @@
+// new variables
+
+
+
+// overwrite bootstrap variables
+$brand-primary:         #895cd1; //#ff6d5a
+
 
 /* underscores default variables */
 
