migrated underscores templates to bootstrap, fixed gulp watch

--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -1,6 +1,9 @@
 // new variables
 
-
+// Basics of a navbar
+$navbar-height:                    60px;
+$navbar-margin-bottom:             0px;
+$navbar-border-radius:             0px;
 
 // overwrite bootstrap variables
 $brand-primary:         #895cd1; //#ff6d5a
