--- a/css/style.css
+++ b/css/style.css
@@ -9,118 +9,13 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: new-theme
 Tags:
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-new theme is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
-/*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
-----------------------------------------------------------------
-# Normalize
-# Typography
-# Elements
-# Forms
-# Navigation
-	## Links
-	## Menus
-# Accessibility
-# Alignments
-# Clearings
-# Widgets
-# Content
-	## Posts and pages
-	## Comments
-# Infinite scroll
-# Media
-	## Captions
-	## Galleries
---------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Theme
 --------------------------------------------------------------*/
 /* underscores default variables */
-.menu-item {
-  float: left;
-  width: auto;
-  display: inline; }
-
-ul.nav.navbar-nav a {
-  display: block;
-  padding-top: .425rem;
-  padding-bottom: .425rem; }
-
-.navbar-toggle {
-  position: relative;
-  float: right;
-  margin-right: 1rem;
-  padding: 9px 10px;
-  background-color: transparent;
-  background-image: none;
-  border: 1px solid transparent; }
-  .navbar-toggle:focus {
-    outline: 0; }
-  .navbar-toggle .icon-bar {
-    display: block;
-    width: 22px;
-    height: 2px;
-    border-radius: 1px; }
-  .navbar-toggle .icon-bar + .icon-bar {
-    margin-top: 4px; }
-
-.navbar .collapsing, .navbar .collapse.in {
-  width: 100%;
-  float: left; }
-
-.navbar-dark .navbar-toggle {
-  border: 1px solid #fff; }
-
-.navbar-dark .icon-bar {
-  border-bottom: 1px solid #fff; }
-
-.navbar-dark .dropdown-menu {
-  background-color: #333; }
-
-.navbar #main-menu {
-  float: left; }
-
-.navbar-nav .nav-item {
-  float: left; }
-
-.navbar-nav .nav-link {
-  display: block;
-  padding-top: .425rem;
-  padding-bottom: .425rem; }
-  .navbar-nav .nav-link + .nav-link {
-    margin-left: 0rem; }
-
-.navbar-nav .nav-item + .nav-item {
-  margin-left: 0rem; }
-
-.nav-link {
-  margin-left: .425rem;
-  margin-right: .425rem; }
-
-.dropdown-menu .dropdown-menu {
-  position: relative;
-  display: block;
-  border: none;
-  box-shadow: none;
-  margin-left: 10px;
-  width: 140px; }
-  .dropdown-menu .dropdown-menu li {
-    list-style: square;
-    padding-left: 0px; }
-
-.dropdown-menu .menu-item {
-  width: 100%; }
-  .dropdown-menu .menu-item a:hover {
-    background-color: #895cd1; }
+#content header {
+  margin: 20px 0; }
 
 /*--------------------------------------------------------------
 # Assets
@@ -2858,7 +2753,7 @@ input[type="button"].btn-block {
     clear: both; }
   @media (min-width: 544px) {
     .navbar {
-      border-radius: 0.25rem; } }
+      border-radius: 0px; } }
 
 .navbar-full {
   z-index: 1000; }
@@ -4801,6 +4696,129 @@ a.text-danger:focus, a.text-danger:hover {
 @media print {
   .hidden-print {
     display: none !important; } }
+
+.wrapper {
+  padding: 30px 0; }
+
+#wrapper-hero {
+  padding: 0px !important; }
+
+.sticky, .gallery-caption, .bypostauthor {
+  font-size: inherit; }
+
+.wrapper#wrapper-sticky {
+  border-bottom: 1px solid #818a91; }
+
+#wrapper-footer-full, #wrapper-static-hero {
+  background-color: #eceeef; }
+
+.wp-caption {
+  font-size: inherit; }
+
+.wp-caption-text {
+  font-size: inherit; }
+
+.screen-reader-text {
+  font-size: inherit; }
+
+.alignright {
+  float: right;
+  padding-left: 10px; }
+
+.alignleft {
+  float: left;
+  padding-right: 10px; }
+
+.aligncenter {
+  margin: 0px auto; }
+
+.entry-footer span {
+  padding-right: 10px; }
+
+img.wp-post-image, article img, figure, img, #secondary img {
+  max-width: 100%;
+  height: auto; }
+
+a.skip-link {
+  z-index: 1000;
+  position: fixed;
+  top: 0px;
+  right: 0px; }
+
+.jumbotron {
+  margin-bottom: 0px; }
+
+.menu-item {
+  float: left;
+  width: auto;
+  display: inline; }
+
+.navbar-toggle {
+  position: relative;
+  float: right;
+  margin-right: 1rem;
+  padding: 9px 10px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent; }
+  .navbar-toggle:focus {
+    outline: 0; }
+  .navbar-toggle .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px; }
+  .navbar-toggle .icon-bar + .icon-bar {
+    margin-top: 4px; }
+
+.navbar .collapsing, .navbar .collapse.in {
+  width: 100%;
+  float: left; }
+
+.navbar-dark .navbar-toggle {
+  border: 1px solid #fff; }
+
+.navbar-dark .icon-bar {
+  border-bottom: 1px solid #fff; }
+
+.navbar-dark .dropdown-menu {
+  background-color: #373a3c; }
+
+.navbar #main-menu {
+  float: left; }
+
+.navbar-nav .nav-item {
+  float: left; }
+
+.navbar-nav .nav-link {
+  display: block;
+  padding-top: .425rem;
+  padding-bottom: .425rem; }
+  .navbar-nav .nav-link + .nav-link {
+    margin-left: 0rem; }
+
+.navbar-nav .nav-item + .nav-item {
+  margin-left: 0rem; }
+
+.nav-link {
+  margin-left: .425rem;
+  margin-right: .425rem; }
+
+.dropdown-menu .dropdown-menu {
+  position: relative;
+  display: block;
+  border: none;
+  box-shadow: none;
+  margin-left: 10px;
+  width: 140px; }
+  .dropdown-menu .dropdown-menu li {
+    list-style: square;
+    padding-left: 0px; }
+
+.dropdown-menu .menu-item {
+  width: 100%; }
+  .dropdown-menu .menu-item a:hover {
+    background-color: #895cd1; }
 
 /*--------------------------------------------------------------
 # Modules
