--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,111 +1,3 @@
-
-//Bootstrap3 to Bootstrap4 "translation" 
-.menu-item {float:left; width:auto; display:inline;}
-ul.nav.navbar-nav a {
-	display: block;
-   padding-top:    .425rem;
-   padding-bottom: .425rem;
+#content header {
+    margin: 20px 0;
 }
-
-// Navbar toggle
-//
-// Custom button for toggling the `.navbar-collapse`, powered by the collapse
-// JavaScript plugin.
-// Navbar vertical align
-
-.navbar-toggle {
-  position: relative;
-  float: right;
-  margin-right: 1rem;
-  padding: 9px 10px;
-  background-color: transparent;
-  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 1px solid transparent;
-
-
-// We remove the `outline` here, but later compensate by attaching `:hover`
-// styles to `:focus`.
-  &:focus {
-    outline: 0;
-  }
-
-  // Bars
-  .icon-bar {
-    display: block;
-    width: 22px;
-    height: 2px;
-    border-radius: 1px;
-  }
-  .icon-bar + .icon-bar {
-    margin-top: 4px;
-  }
-}
-
-.navbar {
-  .collapsing, .collapse.in {
-    width:100%;
-    float:left;
-  }
-}
-
-.navbar-dark {
-	.navbar-toggle {
-		border:1px solid #fff;
-	}
-	.icon-bar {
-		border-bottom:1px solid #fff;
-	}
-  .dropdown-menu {
-    background-color: #333;
-  }
-}
-
-.navbar #main-menu {
-	float:left;
-}
-
-.navbar-nav {
-  .nav-item {
-    float: left;
-  }
-
-  .nav-link {
-    display: block;
-    padding-top:    .425rem;
-    padding-bottom: .425rem;
-
-    + .nav-link {
-      margin-left: 0rem;
-    }
-  }
-
-  .nav-item + .nav-item {
-    margin-left: 0rem;
-  }
-}
-
-.nav-link {
-  margin-left:.425rem;
-  margin-right:.425rem;
-}
-
-// Fixing BS dropdown in a dropdown
-.dropdown-menu .dropdown-menu {
-  position:relative;
-  display:block;
-  border: none;
-  box-shadow: none;
-  margin-left:10px;
-  width:140px;
-  li {
-    list-style: square;
-    padding-left: 0px;
-  }
-}
-
- .dropdown-menu .menu-item {
-    width:100%;
-    a:hover {
-      background-color:$brand-primary;
-    }
-  }
