--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -6,7 +6,7 @@ $navbar-margin-bottom:             0px;
 $navbar-border-radius:             0px;
 
 // overwrite bootstrap variables
-$brand-primary:         #895cd1; //#ff6d5a
+$brand-primary:         #0275d8; //#ff6d5a
 
 
 /* underscores default variables */
