--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,14 +25,11 @@ Tags:
 /*--------------------------------------------------------------
 # Modules - Add modules
 --------------------------------------------------------------*/
-@import "modules/lawpress";
-@import "modules/service-idea";
 @import "modules/masonry";
 @import "modules/filter";
-@import "modules/interna";
-@import "modules/protek";
 @import "modules/lightbox";
-@import "modules/about-demo";
+
+@import "modules/home-example";
 
 /*--------------------------------------------------------------
 # Theme - Add your styles in theme/theme.scss
