--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,7 @@ Tags:
 @import "modules/masonry";
 @import "modules/filter";
 @import "modules/lightbox";
+@import "modules/parallax";
 
 @import "modules/home-example";
 
@@ -36,3 +37,6 @@ Tags:
 --------------------------------------------------------------*/
 @import "theme/theme_variables";
 @import "theme/theme";
+
+@import "theme/buttons";
+@import "theme/animate";
