--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,4 +1,9 @@
-// Have fun
+/* 
+*	All your CSS & SASS can go here!
+*
+*	Use the sass/themes folder as your personal sass directory!
+*/
+
 .spacer {
 	height: 40px;
 }
